# music_store

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: base.py  route_login.py  route_music.py  route_users.py
core/: config.py  security.py
db/models/: music.py  users.py
db/utils/: music.py  users.py
